--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <!-- <script src="variable.js"></script> -->
-    <script src="datatype.js"></script>
-</body>
-</html>
+    <!-- <script src="datatype.js"></script> -->
+    <!-- <script src="oprator.js"></script> -->
+    <script src="controlflow.js"></script>
+  </body>
+  </html>
