--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <!-- <script src="variable.js"></script> -->
     <!-- <script src="datatype.js"></script> -->
     <!-- <script src="oprator.js"></script> -->
-    <script src="controlflow.js"></script>
+    <!-- <script src="controlflow.js"></script> -->
+    <!-- <script src="loop.js"></script> -->
+    <!-- <script src="funcation.js"></script> -->
+    <script src="array.js"></script>
   </body>
   </html>
