--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <!-- <script src="controlflow.js"></script> -->
     <!-- <script src="loop.js"></script> -->
     <!-- <script src="funcation.js"></script> -->
-    <!-- <script src="array.js"></script> -->
-    <script src="object.js"></script>
+    <script src="array.js"></script>
+    <!-- <script src="object.js"></script> -->
 
   </body>
   </html>
