--- a/dom.html
+++ b/dom.html
@@ -5,19 +5,46 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DOM</title>
 </head>
+<style>
+    .card{
+        width: 200px;
+        height: 90px;
+        background-color: bisque;
+        border: 2px solid black;
+        border-radius: 5px;
+    }
+    .outer{
+       width: 300px;
+       height: 300px;
+       background-color: rgb(166, 74, 74);
+       margin: 3px;
+       display: flex;
+       justify-content: center;
+       align-items: center;
+    }
+    .inner{
+        width: 100px;
+        height: 100px;
+        background-color: rgb(222, 169, 169);
+    }
+  </style>
+
 <body>
 
   <h1 class="abc">Lorem, ipsum dolor.</h1>
   <h1 id="abc">Remove h1 Tag with Js</h1>
   <h1 class="abc">Lorem, ipsum dolor.</h1>
-
-  <!-- <a href="" target="_blank">Link</a> -->
+  <a href="" target="_blank">Link</a>
+  <div class="card"></div>
 
   <div class="box">
 
   </div>
 
   <div class="box1"></div> <!-- Avaced JS -->
+
+  <!-- Advance JS -->
+  <script src="dom.js"></script>
 
 </body>
 </html>
