--- a/event.html
+++ b/event.html
@@ -10,6 +10,12 @@
             height: 200px;
             border: 1px solid red;
         }
+
+        .outer_box {
+            width: 200px;
+            height: 200px;
+            border: 1px solid red;
+        }
     </style>
 </head>
 <body>
@@ -22,6 +28,23 @@
 
     <input type="text">
 
+    <h2>Select your device: <i class="device"></i></h2>
+<select class="sel">
+  <option>Select Phone</option>
+  <option value="iphone 15">Iphone 15</option>
+  <option value="s22 ultra">S22 Ultra</option>
+  <option value="nokia 3310">Nokia 3310</option>
+</select>
+
+<br><br>
+
+     <div class="outer_box"></div>
+    <br><br>
+     backgrond color:<input type = "color" class="color_inp">
+     boder color:<input type = "color" class="border_inp">
+<br><br>
+
     <script src="event.js"></script>
+
 </body>
 </html>
