--- a/event.html
+++ b/event.html
@@ -16,6 +16,12 @@
             height: 200px;
             border: 1px solid red;
         }
+
+        .box2 {
+            width: 200px;
+            height: 200px;
+            background-color:rgb(17, 100, 158);
+        }
     </style>
 </head>
 <body>
@@ -43,6 +49,8 @@
      backgrond color:<input type = "color" class="color_inp">
      boder color:<input type = "color" class="border_inp">
 <br><br>
+
+    <div class="box2"></div>
 
     <script src="event.js"></script>
 
