--- a/mousemove.html
+++ b/mousemove.html
@@ -32,7 +32,7 @@
         <h1>A</h1>
     </div>
 
-    <script src="keydown.js"></script>
+    <script src="mousemove.js"></script>
 </body>
 
 </html>
